@@ -3,8 +3,8 @@
 <table>
   <tr class="list">
     <th>Nome</th>
-    <th>Endereço</th>
     <th>Nascimento</th>
+    <th>Endereço</th>
     <th>País</th>
     <th>Sexo</th>
     <th>Estado Civil</th>
@@ -16,8 +16,8 @@
 	par_impar = 1 - par_impar %>
   <tr class="listLine<%= par_impar %>">
     <td><%=h hospede.nome %></td>
-    <td><%=h hospede.endereco %></td>
     <td><%=h hospede.nascimento %></td>
+    <td><%=h hospede.endereco %></td>
     <td><%=h hospede.pais %></td>
     <td><%=h hospede.sexo %></td>
     <td><%=h hospede.estCivil %></td>
